--- a/codigo/Sprint2e3Sofia/json-server/public/assets/css/telasSofia.css
+++ b/codigo/Sprint2e3Sofia/json-server/public/assets/css/telasSofia.css
@@ -206,3 +206,130 @@ section a{
 .local, .dias, .periodos{
     display: none;
 }
+/* MOBILE */
+
+#menuTuggle{
+    display: none;
+}
+
+.menu-icon{
+    display: none;
+}
+
+#logoMobile{
+    display: none;
+}
+
+@media screen and (max-width: 1024px){
+
+    #logoMobile{
+        display: flex;
+        justify-content: center;
+    }
+
+    .header{
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        background-color: lightgray;
+        z-index: 1; 
+    }
+
+    header nav #secoesMenu{
+        display: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .menu{
+        display: flex;
+        position: fixed;
+        flex-wrap: wrap;
+        align-content: center;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-color: rgba(0,0,0,0.7);
+    }
+
+    .menu li{
+        display: block;
+        width: 100%;
+        margin-left: 0px;
+        margin-bottom: 20px;
+    }
+
+    #m3{
+        display: none;
+    }
+
+    #m1, #m2, #m4, #m5{
+        background-color: blueviolet;
+    }
+
+    #m6, #m7, #m8{
+        background-color: aqua;
+    }
+
+    .menu li a{
+        display: block;
+        text-align: center;
+        width: 100%;
+        color: white;
+    }
+
+    .menu-icon{
+        display: block;
+        color: white;
+        width: 50px;
+        height: inherit;
+        position: absolute;
+        top: 15px;
+        right: 30px;
+        line-height: 60px;
+        z-index: 999;
+
+    }
+    
+    .menu-icon:hover{
+        cursor: pointer;
+    }
+    .menu-icon i{
+        font-size: 1.7em;
+    }
+
+    #menuTuggle:checked ~ label i:nth-child(2){
+        display: block;
+    }
+
+    #menuTuggle:checked ~ label i:first-child{
+        display: none;
+    }
+
+    #menuTuggle:not(checked) ~ label i:nth-child(2){
+        display: none;
+    }
+
+    #menuTuggle:not(checked) ~ label i:first-child{
+        display: block;
+    }
+
+    #menuTuggle:checked ~ ul{
+        display: flex;
+    }
+
+    
+    #menuTuggle:not(checked) ~ ul{
+        display: none;
+    }
+
+    #menuTuggle{
+        display: none;
+    }
+
+    
+
+}
+
