--- a/codigo/MenuLogado/assets/css/style.css
+++ b/codigo/MenuLogado/assets/css/style.css
@@ -82,14 +82,34 @@ header a{
     grid-row: 1;
 }
 
+#m2{
+    grid-column: 2;
+    grid-row: 1;
+}
+
 #m3{
     grid-column: 3;
     grid-row: 1;
 }
 
-#m9{
+#m4{
+    grid-column: 4;
+    grid-row: 1;
+    background-color: whitesmoke;
+    padding: 4px 55px;
+    border-radius: 20px;
+    border: 2px solid black;
+    font-weight: bold;
+}
+
+#m5{
     grid-column: 5;
     grid-row: 1;
+    background-color: rgb(156, 173, 191);
+    padding: 6px 40px;
+    border-radius: 20px;
+    border: 2px solid black;
+    font-weight: bold;
 }
 
 #m3:hover, #m4:hover, #m5:hover{
@@ -180,7 +200,7 @@ header a{
         display: none;
     }
 
-    #m1, #m2{
+    #m1, #m2, #m4, #m5{
         background-color: lightslategray;
         padding: 12px 20px;
         border-radius: 20px;
