--- a/codigo/HtmlECssMenu/assets/css/style.css
+++ b/codigo/HtmlECssMenu/assets/css/style.css
@@ -1,4 +1,4 @@
-/* GERAL */
+* GERAL */
 
 html{
     height: 100%;
@@ -61,6 +61,7 @@ header a{
     position: fixed;
     width: 100%;
     z-index: 2;
+    overflow: hidden;
 }
 
 .mItem{
@@ -82,14 +83,34 @@ header a{
     grid-row: 1;
 }
 
+#m2{
+    grid-column: 2;
+    grid-row: 1;
+}
+
 #m3{
     grid-column: 3;
     grid-row: 1;
 }
 
-#m9{
+#m4{
+    grid-column: 4;
+    grid-row: 1;
+    background-color: whitesmoke;
+    padding: 4px 55px;
+    border-radius: 20px;
+    border: 2px solid black;
+    font-weight: bold;
+}
+
+#m5{
     grid-column: 5;
     grid-row: 1;
+    background-color: rgb(156, 173, 191);
+    padding: 6px 40px;
+    border-radius: 20px;
+    border: 2px solid black;
+    font-weight: bold;
 }
 
 #m3:hover, #m4:hover, #m5:hover{
@@ -145,6 +166,10 @@ header a{
         z-index: 1; 
     }
 
+    .bar{
+        height: 0px;
+    }
+
     header nav #secoesMenu{
         display: absolute;
         width: 100%;
@@ -180,7 +205,7 @@ header a{
         display: none;
     }
 
-    #m1, #m2{
+    #m1, #m2, #m4, #m5{
         background-color: lightslategray;
         padding: 12px 20px;
         border-radius: 20px;
@@ -261,4 +286,5 @@ header a{
         margin-left: 2%;
         margin-bottom: 20px;
     }
+
 }
