--- a/codigo/Sprint2e3Sofia/json-server/public/assets/css/styleAnfitrião.css
+++ b/codigo/Sprint2e3Sofia/json-server/public/assets/css/styleAnfitrião.css
@@ -1,35 +1,34 @@
+/*PAGINA VAGAS DE VOLUNTARIADO */
 
 main{
     display: grid;
-    grid-template-columns: 4fr 6fr;
-    column-gap: 30px;
-    align-items: center;
+    grid-template-columns: 7fr 4fr;
+    column-gap: 40px;
+    padding-top: 150px;
 }
 
 .titulo{
     text-align: center;
-    margin-top: 160px;
+    margin-top: 10px;
     margin-bottom: 30px;
-    grid-column: 1/-1;
-    grid-row: 1;
+    grid-column: 1/3;
 }
 
-#view{
-    display: grid;
-    grid-template-columns: 8fr 4fr;
-    column-gap: 100px;
-    margin-bottom: 20px; 
+#div-avaliacao{
+    grid-column: 2;
 }
 
-#cards{
+.cards{
     grid-column: 1;
-}   
+}
+
 section .card{
     border: 1.5px solid black;
     border-radius: 8px;
-    padding: 10px;  
+    padding: 10px;
     background-color: whitesmoke;
-    margin-bottom: 20px;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .card .conteudo{
@@ -60,7 +59,7 @@ section .card{
 }
 
 .projimagem{
-    width: 20%;
+    width: 35%;
 }
 
 .resumo{
@@ -71,34 +70,18 @@ section a{
     text-decoration: none;
 }
 
-#avaliacao p{
-    margin: 0;
-    text-align: center;
-    margin-bottom: 10px;
+#search{
+    width: 100%;
 }
-#div-avaliacao{
-    grid-column: 2;
-    margin: 0;
-    max-width: 300px; 
+
+.legenda{
+    display: inline;
+    margin-left: 5px;
 }
-#avaliacao label{
-    display: block;
-}
-#avaliacao{
-    padding: 10px;
-    max-width: 500px;
-}
-#icons-container{
-    text-align: center;
-}
-#icons-container i{
-    padding: 0 5px;
-    font-size: 3rem;
-    color: yellow;
-}   
-#remover{
-    grid-column: 2;
-}
+
+/* MOBILE */
+
+
 @media screen and (max-width: 1195px){
 
     main{
@@ -108,6 +91,11 @@ section a{
 
     .titulo{
         margin-bottom: 20px;
+    }
+
+    .cards{
+        margin-top: 10px;
+        z-index: 1;
     }
 
 }
@@ -124,4 +112,4 @@ section a{
         margin-bottom: 10px;
     }
 
-}   
+}
