--- a/codigo/Sprint2e3Sofia/json-server/public/assets/css/styleAnfitrião.css
+++ b/codigo/Sprint2e3Sofia/json-server/public/assets/css/styleAnfitrião.css
@@ -40,6 +40,21 @@ section .card{
     align-items: center;
 }
 
+#semCards{
+    background-color: slategray ;
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    text-align: center;
+    border-color: black;
+    border-radius: 10px;
+    grid-row: 2;
+    grid-column: 2;
+    width: 100%;
+    margin-top: 30px;
+    padding: 50px;
+    margin-bottom: 35px;
+}
 .texto button{
     display: inline;
 }
@@ -111,6 +126,11 @@ section a{
     .cards{
         margin-top: 10px;
         z-index: 1;
+    }
+
+    #semCards{
+        margin-top: 130px;
+        margin-bottom: 130px;
     }
 
 }
