--- a/codigo/Sprint2e3Sofia/json-server/public/assets/css/telasFernando.css
+++ b/codigo/Sprint2e3Sofia/json-server/public/assets/css/telasFernando.css
@@ -74,6 +74,10 @@ main{
     display: inline-flex;
 }
 
+.btn:hover{
+    transform: scale(1.02);
+}
+
 @media screen and (max-width: 1195px){
 
     main{
